--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
     "firebase": "7.9.0",
-    "expo-image-picker": "~9.1.0"
+    "expo-image-picker": "~9.1.0",
+    "expo-secure-store": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
